--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
     Author: BootstrapMade.com
     Author URL: https://bootstrapmade.com/
   ======================================================= -->
+  <!-- termly  Code --> 
+<script
+type="text/javascript"
+src="https://app.termly.io/resource-blocker/93b22750-62b6-4820-a3b4-6da1cedc45f6?autoBlock=on"
+></script>
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-8QNF5DRCFQ"></script>
   <script>
@@ -43,11 +48,7 @@
     gtag('config', 'G-8QNF5DRCFQ');
   </script>
   <meta name="google-adsense-account" content="ca-pub-9390100890086016">
-<!-- Facebook Pixel Code --> 
-<script
-  type="text/javascript"
-  src="https://app.termly.io/resource-blocker/93b22750-62b6-4820-a3b4-6da1cedc45f6?autoBlock=on"
-></script>
+
   <!-- Meta Pixel Code -->
   <script> 
   !function (f, b, e, v, n, t, s) 
