--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@ src="https://app.termly.io/resource-blocker/93b22750-62b6-4820-a3b4-6da1cedc45f6
     gtag('config', 'G-8QNF5DRCFQ');
   </script>
   <meta name="google-adsense-account" content="ca-pub-9390100890086016">
-
+<!-- Facebook Pixel Code -->
+<!-- End Facebook Pixel Code -->
   <!-- Meta Pixel Code -->
   <script> 
   !function (f, b, e, v, n, t, s) 
@@ -60,6 +61,7 @@ src="https://app.termly.io/resource-blocker/93b22750-62b6-4820-a3b4-6da1cedc45f6
      t.async = !0; t.src = v; s = b.getElementsByTagName(e)[0];
       s.parentNode.insertBefore(t, s) }
       (window, document, 'script', 'https://connect.facebook.net/en_US/fbevents.js'); 
+      fbq('consent', 'grant');
       fbq('init', '1681711932601556'); fbq('track', 'PageView'); </script><noscript>
     <img height="1" width="1" style="display:none"
       src="https://www.facebook.com/tr?id=1681711932601556&ev=PageView&noscript=1" />
@@ -637,13 +639,12 @@ src="https://app.termly.io/resource-blocker/93b22750-62b6-4820-a3b4-6da1cedc45f6
   </div> <!-- .site-wrap -->
 
   <a href="#" class="back-to-top"><i class="icon la la-angle-up"></i></a>
-
+  <a href="#" class="termly-display-preferences">Consent Preferences</a>
   <!-- Vendor JS Files -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/jquery/jquery-migrate.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
   <script src="vendor/easing/easing.min.js"></script>
-  <script src="vendor/php-email-form/validate.js"></script>
   <script src="vendor/sticky/sticky.js"></script>
   <script src="vendor/aos/aos.js"></script>
   <script src="vendor/owlcarousel/owl.carousel.min.js"></script>
